--- a/views/examples.html
+++ b/views/examples.html
@@ -5,6 +5,7 @@
   <title>{{ title }} - Chris McCormack</title>
 
   <!-- Javascript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous">
@@ -19,9 +20,12 @@
 </head>
 
 <body>
-  <div class='container'>
+  <div class='container' style='margin-top: 50px;'>
     <div class='row'>
       <div class='col'>
+        <div class="alert alert-danger" style="display: {{'block' if error else 'none'}};" role="alert">
+          <strong>{{ error }}: </strong>Validate the short URL and try again.
+        </div>
         <h1>{{ title }}</h1>
 
       </div>
